[gd_scene load_steps=2 format=3 uid="uid://hud001"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="TopBar" type="Panel" parent="."]
offset_left = 0.0
offset_top = 0.0
offset_right = 720.0
offset_bottom = 70.0

[node name="TopBarBg" type="ColorRect" parent="TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.15, 0.25, 0.8)

[node name="TimeSection" type="VBoxContainer" parent="TopBar"]
layout_mode = 1
offset_left = 30.0
offset_top = 8.0
offset_right = 130.0
offset_bottom = 62.0
theme_override_constants/separation = 0

[node name="TimeTitle" type="Label" parent="TopBar/TimeSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 0.6)
text = "TIME"
horizontal_alignment = 1

[node name="TimeValue" type="Label" parent="TopBar/TimeSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "03:00"
horizontal_alignment = 1

[node name="ShotsSection" type="VBoxContainer" parent="TopBar"]
layout_mode = 1
offset_left = 280.0
offset_top = 8.0
offset_right = 440.0
offset_bottom = 62.0
theme_override_constants/separation = 2

[node name="ShotsTitle" type="Label" parent="TopBar/ShotsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 0.6)
text = "SHOTS"
horizontal_alignment = 1

[node name="HeartsContainer" type="HBoxContainer" parent="TopBar/ShotsSection"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="Heart1" type="Label" parent="TopBar/ShotsSection/HeartsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(1, 0.4, 0.5, 1)
text = "♥"

[node name="Heart2" type="Label" parent="TopBar/ShotsSection/HeartsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(1, 0.4, 0.5, 1)
text = "♥"

[node name="Heart3" type="Label" parent="TopBar/ShotsSection/HeartsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(1, 0.4, 0.5, 1)
text = "♥"

[node name="Heart4" type="Label" parent="TopBar/ShotsSection/HeartsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(1, 0.4, 0.5, 1)
text = "♥"

[node name="ScoreSection" type="VBoxContainer" parent="TopBar"]
layout_mode = 1
offset_left = 590.0
offset_top = 8.0
offset_right = 690.0
offset_bottom = 62.0
theme_override_constants/separation = 0

[node name="ScoreTitle" type="Label" parent="TopBar/ScoreSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 0.6)
text = "SCORE"
horizontal_alignment = 1

[node name="ScoreValue" type="Label" parent="TopBar/ScoreSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0"
horizontal_alignment = 1
